hphp/test/slow/class_constant/globals-array.php.expectf
Fatal error: Cannot have globals in constant declaration in %s/test/slow/class_constant/globals-array.php on line 5